whoami2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami2-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami2
  template:
    metadata:
      labels:
        app: whoami2
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        ports: 
          - name: web
            containerPort: 80
