whoami2/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`argocd.machinelearning-models.com`)
    kind: Rule
    services:
    - name: whoami-service
      port: 80
